packages/@sanity/components/src/fieldsets/styles/DefaultFieldset.css
@import 'part:@sanity/base/theme/variables-style';

.root {
  margin: 0;
  padding: 0;
  composes: root from "part:@sanity/components/formfields/default-style";
  border: none;

  /* user agent sets min-width this to --webkit-min-content */
  min-width: 0;

  & & {
    /* nested inside itself */
    margin: 0;
  }
}

@media (--screen-medium) {
  .columns4 .fieldWrapper {
    display: grid;
    grid-gap: var(--medium-padding);
    grid-template-columns: repeat(4, 1fr);
  }

  .columns3 .fieldWrapper {
    display: grid;
    grid-gap: var(--medium-padding);
    grid-template-columns: repeat(3, 1fr);
  }

  .columns2 .fieldWrapper {
    display: grid;
    grid-gap: var(--medium-padding);
    grid-template-columns: repeat(2, 1fr);
  }
}

.transparent {
  background-color: transparent;
}

.columns1 {
  composes: root;
}

.columns2 {
  composes: root;
}

.content {
  position: relative;
  display: none;
  background-color: transparent;

  @nest &.isOpen {
    display: block;
  }

  @nest .transparent & {
    background-color: transparent;
  }

  & & {
    /* nested inside itself */
    border: none;
    padding: 0;
    box-shadow: none;
  }
}

.level1 > .inner > .content {
  background-color: var(--component-bg);
  border: 1px solid var(--component-border-color);
  box-shadow: var(--component-box-shadow);
  padding: var(--medium-padding);
  border-radius: var(--border-radius-base);
}

.level2 > .inner > .content {
  background-color: var(--component-bg);
  border: 1px solid var(--component-border-color);
  box-shadow: var(--component-box-shadow);
  padding: var(--medium-padding);
  border-radius: var(--border-radius-base);
}

.inner {
  outline: none;
}

.inner:not(.level1):focus > .content {
  outline: 1px solid var(--input-border-color-focus);
}

.inner:not(.level2):focus > .content {
  outline: 1px solid var(--input-border-color-focus);
}

.level1 > .inner:focus > .content {
  border: 1px solid var(--input-border-color-focus);
  box-shadow: var(--component-box-shadow--focus);
  outline: none !important;
}

.level2 > .inner :focus > .content {
  border: 1px solid var(--input-border-color-focus);
  box-shadow: var(--component-box-shadow--focus);
  outline: none !important;
}

.inner {
  display: block;
}

.legend + .content {
  margin-top: var(--small-padding);
}

.legend {
  composes: headingLevel_1 from 'part:@sanity/base/theme/typography/forms-style';
  display: block;
  width: 100%;
  margin: 0;
  padding: 0;
  user-select: none;
  cursor: default;

  @nest .level1 & {
    font-size: var(--font-size-base);
    text-transform: none;
  }

  @nest .level2 & {
    font-size: var(--font-size-base);
    text-transform: none;
  }

  @nest .level3 & {
    font-size: var(--font-size-base);
    text-transform: none;
  }

  @nest .level4 & {
    font-size: var(--font-size-base);
    text-transform: none;
  }

  @nest .level5 & {
    font-size: var(--font-size-base);
    text-transform: none;
  }
}

.level1,
.level2,
.level3,
.level4 {
  display: block;
  box-shadow: none;
}

.functions {
  margin-top: 1em;
}

.arrow {
  display: inline-block;
  width: 1em;
  height: 1em;
  overflow: hidden;
  line-height: 1;
  margin: 0;
  padding: 0;
  position: relative;
  margin-right: 0.25em;
  vertical-align: middle;
  transition: transform 0.1s linear;
  transform: rotate(-90deg);
  margin-top: -0.1em;

  @nest &.isOpen {
    transform: rotate(0);
  }

  @nest & svg {
    position: absolute;
    transform: scale(1.2);
  }
}

.description {
  composes: description from 'part:@sanity/base/theme/typography/text-blocks-style';
  margin-top: 0;
  padding-top: 0;
  margin-bottom: var(--small-padding);
  padding-bottom: 0;
  display: none;

  @nest &.isOpen {
    display: block;
  }
}

.debugNestingLevel {
  display: none;
}

